src/main/scala/com/pravega/gen/SqlBaseParser.java
// Generated from /home/ranganaths/IdeaProjects/PravegaSQL/src/main/scala/com/pravega/antlr/SqlBase.g4 by ANTLR 4.8
package .;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SqlBaseParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, EMIT=8, CHANGES=9, 
		SELECT=10, FROM=11, AS=12, ALL=13, DISTINCT=14, WHERE=15, WITHIN=16, WINDOW=17, 
		GROUP=18, BY=19, HAVING=20, LIMIT=21, AT=22, OR=23, AND=24, IN=25, NOT=26, 
		EXISTS=27, BETWEEN=28, LIKE=29, IS=30, NULL=31, TRUE=32, FALSE=33, INTEGER=34, 
		DATE=35, TIME=36, TIMESTAMP=37, INTERVAL=38, YEAR=39, MONTH=40, DAY=41, 
		HOUR=42, MINUTE=43, SECOND=44, MILLISECOND=45, YEARS=46, MONTHS=47, DAYS=48, 
		HOURS=49, MINUTES=50, SECONDS=51, MILLISECONDS=52, ZONE=53, TUMBLING=54, 
		HOPPING=55, SIZE=56, ADVANCE=57, CASE=58, WHEN=59, THEN=60, ELSE=61, END=62, 
		JOIN=63, FULL=64, OUTER=65, INNER=66, LEFT=67, RIGHT=68, ON=69, PARTITION=70, 
		STRUCT=71, WITH=72, VALUES=73, CREATE=74, TABLE=75, TOPIC=76, STREAM=77, 
		STREAMS=78, INSERT=79, DELETE=80, INTO=81, DESCRIBE=82, EXTENDED=83, PRINT=84, 
		EXPLAIN=85, ANALYZE=86, TYPE=87, TYPES=88, CAST=89, SHOW=90, LIST=91, 
		TABLES=92, TOPICS=93, QUERY=94, QUERIES=95, TERMINATE=96, LOAD=97, COLUMNS=98, 
		COLUMN=99, PARTITIONS=100, FUNCTIONS=101, FUNCTION=102, DROP=103, TO=104, 
		RENAME=105, ARRAY=106, MAP=107, SET=108, RESET=109, SESSION=110, SAMPLE=111, 
		EXPORT=112, CATALOG=113, PROPERTIES=114, BEGINNING=115, UNSET=116, RUN=117, 
		SCRIPT=118, DECIMAL=119, KEY=120, CONNECTOR=121, CONNECTORS=122, SINK=123, 
		SOURCE=124, NAMESPACE=125, MATERIALIZED=126, VIEW=127, PRIMARY=128, IF=129, 
		EQ=130, NEQ=131, LT=132, LTE=133, GT=134, GTE=135, PLUS=136, MINUS=137, 
		ASTERISK=138, SLASH=139, PERCENT=140, CONCAT=141, ASSIGN=142, STRUCT_FIELD_REF=143, 
		STRING=144, INTEGER_VALUE=145, DECIMAL_VALUE=146, FLOATING_POINT_VALUE=147, 
		IDENTIFIER=148, DIGIT_IDENTIFIER=149, QUOTED_IDENTIFIER=150, BACKQUOTED_IDENTIFIER=151, 
		TIME_WITH_TIME_ZONE=152, TIMESTAMP_WITH_TIME_ZONE=153, SIMPLE_COMMENT=154, 
		BRACKETED_COMMENT=155, WS=156, UNRECOGNIZED=157, DELIMITER=158;
	public static final int
		RULE_statements = 0, RULE_singleStatement = 1, RULE_singleExpression = 2, 
		RULE_statement = 3, RULE_query = 4, RULE_resultMaterialization = 5, RULE_tableElements = 6, 
		RULE_tableElement = 7, RULE_tableProperties = 8, RULE_tableProperty = 9, 
		RULE_printClause = 10, RULE_intervalClause = 11, RULE_limitClause = 12, 
		RULE_windowExpression = 13, RULE_tumblingWindowExpression = 14, RULE_hoppingWindowExpression = 15, 
		RULE_sessionWindowExpression = 16, RULE_windowUnit = 17, RULE_groupBy = 18, 
		RULE_groupingElement = 19, RULE_groupingExpressions = 20, RULE_values = 21, 
		RULE_selectItem = 22, RULE_relation = 23, RULE_joinType = 24, RULE_joinWindow = 25, 
		RULE_withinExpression = 26, RULE_joinWindowSize = 27, RULE_joinCriteria = 28, 
		RULE_aliasedRelation = 29, RULE_columns = 30, RULE_relationPrimary = 31, 
		RULE_expression = 32, RULE_booleanExpression = 33, RULE_predicated = 34, 
		RULE_predicate = 35, RULE_valueExpression = 36, RULE_primaryExpression = 37, 
		RULE_timeZoneSpecifier = 38, RULE_comparisonOperator = 39, RULE_booleanValue = 40, 
		RULE_type = 41, RULE_typeParameter = 42, RULE_baseType = 43, RULE_whenClause = 44, 
		RULE_identifier = 45, RULE_sourceName = 46, RULE_number = 47, RULE_literal = 48, 
		RULE_nonReserved = 49;
	private static String[] makeRuleNames() {
		return new String[] {
			"statements", "singleStatement", "singleExpression", "statement", "query", 
			"resultMaterialization", "tableElements", "tableElement", "tableProperties", 
			"tableProperty", "printClause", "intervalClause", "limitClause", "windowExpression", 
			"tumblingWindowExpression", "hoppingWindowExpression", "sessionWindowExpression", 
			"windowUnit", "groupBy", "groupingElement", "groupingExpressions", "values", 
			"selectItem", "relation", "joinType", "joinWindow", "withinExpression", 
			"joinWindowSize", "joinCriteria", "aliasedRelation", "columns", "relationPrimary", 
			"expression", "booleanExpression", "predicated", "predicate", "valueExpression", 
			"primaryExpression", "timeZoneSpecifier", "comparisonOperator", "booleanValue", 
			"type", "typeParameter", "baseType", "whenClause", "identifier", "sourceName", 
			"number", "literal", "nonReserved"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "','", "'('", "')'", "'.'", "'['", "']'", "'EMIT'", "'CHANGES'", 
			"'SELECT'", "'FROM'", "'AS'", "'ALL'", "'DISTINCT'", "'WHERE'", "'WITHIN'", 
			"'WINDOW'", "'GROUP'", "'BY'", "'HAVING'", "'LIMIT'", "'AT'", "'OR'", 
			"'AND'", "'IN'", "'NOT'", "'EXISTS'", "'BETWEEN'", "'LIKE'", "'IS'", 
			"'NULL'", "'TRUE'", "'FALSE'", "'INTEGER'", "'DATE'", "'TIME'", "'TIMESTAMP'", 
			"'INTERVAL'", "'YEAR'", "'MONTH'", "'DAY'", "'HOUR'", "'MINUTE'", "'SECOND'", 
			"'MILLISECOND'", "'YEARS'", "'MONTHS'", "'DAYS'", "'HOURS'", "'MINUTES'", 
			"'SECONDS'", "'MILLISECONDS'", "'ZONE'", "'TUMBLING'", "'HOPPING'", "'SIZE'", 
			"'ADVANCE'", "'CASE'", "'WHEN'", "'THEN'", "'ELSE'", "'END'", "'JOIN'", 
			"'FULL'", "'OUTER'", "'INNER'", "'LEFT'", "'RIGHT'", "'ON'", "'PARTITION'", 
			"'STRUCT'", "'WITH'", "'VALUES'", "'CREATE'", "'TABLE'", "'TOPIC'", "'STREAM'", 
			"'STREAMS'", "'INSERT'", "'DELETE'", "'INTO'", "'DESCRIBE'", "'EXTENDED'", 
			"'PRINT'", "'EXPLAIN'", "'ANALYZE'", "'TYPE'", "'TYPES'", "'CAST'", "'SHOW'", 
			"'LIST'", "'TABLES'", "'TOPICS'", "'QUERY'", "'QUERIES'", "'TERMINATE'", 
			"'LOAD'", "'COLUMNS'", "'COLUMN'", "'PARTITIONS'", "'FUNCTIONS'", "'FUNCTION'", 
			"'DROP'", "'TO'", "'RENAME'", "'ARRAY'", "'MAP'", "'SET'", "'RESET'", 
			"'SESSION'", "'SAMPLE'", "'EXPORT'", "'CATALOG'", "'PROPERTIES'", "'BEGINNING'", 
			"'UNSET'", "'RUN'", "'SCRIPT'", "'DECIMAL'", "'KEY'", "'CONNECTOR'", 
			"'CONNECTORS'", "'SINK'", "'SOURCE'", "'NAMESPACE'", "'MATERIALIZED'", 
			"'VIEW'", "'PRIMARY'", "'IF'", "'='", null, "'<'", "'<='", "'>'", "'>='", 
			"'+'", "'-'", "'*'", "'/'", "'%'", "'||'", "':='", "'->'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "EMIT", "CHANGES", "SELECT", 
			"FROM", "AS", "ALL", "DISTINCT", "WHERE", "WITHIN", "WINDOW", "GROUP", 
			"BY", "HAVING", "LIMIT", "AT", "OR", "AND", "IN", "NOT", "EXISTS", "BETWEEN", 
			"LIKE", "IS", "NULL", "TRUE", "FALSE", "INTEGER", "DATE", "TIME", "TIMESTAMP", 
			"INTERVAL", "YEAR", "MONTH", "DAY", "HOUR", "MINUTE", "SECOND", "MILLISECOND", 
			"YEARS", "MONTHS", "DAYS", "HOURS", "MINUTES", "SECONDS", "MILLISECONDS", 
			"ZONE", "TUMBLING", "HOPPING", "SIZE", "ADVANCE", "CASE", "WHEN", "THEN", 
			"ELSE", "END", "JOIN", "FULL", "OUTER", "INNER", "LEFT", "RIGHT", "ON", 
			"PARTITION", "STRUCT", "WITH", "VALUES", "CREATE", "TABLE", "TOPIC", 
			"STREAM", "STREAMS", "INSERT", "DELETE", "INTO", "DESCRIBE", "EXTENDED", 
			"PRINT", "EXPLAIN", "ANALYZE", "TYPE", "TYPES", "CAST", "SHOW", "LIST", 
			"TABLES", "TOPICS", "QUERY", "QUERIES", "TERMINATE", "LOAD", "COLUMNS", 
			"COLUMN", "PARTITIONS", "FUNCTIONS", "FUNCTION", "DROP", "TO", "RENAME", 
			"ARRAY", "MAP", "SET", "RESET", "SESSION", "SAMPLE", "EXPORT", "CATALOG", 
			"PROPERTIES", "BEGINNING", "UNSET", "RUN", "SCRIPT", "DECIMAL", "KEY", 
			"CONNECTOR", "CONNECTORS", "SINK", "SOURCE", "NAMESPACE", "MATERIALIZED", 
			"VIEW", "PRIMARY", "IF", "EQ", "NEQ", "LT", "LTE", "GT", "GTE", "PLUS", 
			"MINUS", "ASTERISK", "SLASH", "PERCENT", "CONCAT", "ASSIGN", "STRUCT_FIELD_REF", 
			"STRING", "INTEGER_VALUE", "DECIMAL_VALUE", "FLOATING_POINT_VALUE", "IDENTIFIER", 
			"DIGIT_IDENTIFIER", "QUOTED_IDENTIFIER", "BACKQUOTED_IDENTIFIER", "TIME_WITH_TIME_ZONE", 
			"TIMESTAMP_WITH_TIME_ZONE", "SIMPLE_COMMENT", "BRACKETED_COMMENT", "WS", 
			"UNRECOGNIZED", "DELIMITER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SqlBase.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SqlBaseParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StatementsContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SqlBaseParser.EOF, 0); }
		public List<SingleStatementContext> singleStatement() {
			return getRuleContexts(SingleStatementContext.class);
		}
		public SingleStatementContext singleStatement(int i) {
			return getRuleContext(SingleStatementContext.class,i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlBaseListener ) ((SqlBaseListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlBaseListener ) ((SqlBaseListener)listener).exitStatements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlBaseVisitor ) return ((SqlBaseVisitor<? extends T>)visitor).visitStatements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SELECT || ((((_la - 74)) & ~0x3f) == 0 && ((1L << (_la - 74)) & ((1L << (CREATE - 74)) | (1L << (INSERT - 74)) | (1L << (DESCRIBE - 74)) | (1L << (PRINT - 74)) | (1L << (EXPLAIN - 74)) | (1L << (SHOW - 74)) | (1L << (LIST - 74)) | (1L << (TERMINATE - 74)) | (1L << (DROP - 74)) | (1L << (SET - 74)) | (1L << (UNSET - 74)))) != 0)) {
				{
				{
				setState(100);
				singleStatement();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleStatementContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public SingleStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlBaseListener ) ((SqlBaseListener)listener).enterSingleStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlBaseListener ) ((SqlBaseListener)listener).exitSingleStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlBaseVisitor ) return ((SqlBaseVisitor<? extends T>)visitor).visitSingleStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SingleStatementContext singleStatement() throws RecognitionException {
		SingleStatementContext _localctx = new SingleStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_singleStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			statement();
			setState(109);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SingleExpressionContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SqlBaseParser.EOF, 0); }
		public SingleExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlBaseListener ) ((SqlBaseListener)listener).enterSingleExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlBaseListener ) ((SqlBaseListener)listener).exitSingleExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlBaseVisitor ) return ((SqlBaseVisitor<? extends T>)visitor).visitSingleExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SingleExpressionContext singleExpression() throws RecognitionException {
		SingleExpressionContext _localctx = new SingleExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_singleExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			expression();
			setState(112);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
